fix: Regex lookbehind not support on IOS

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -37,6 +37,7 @@ input::-webkit-inner-spin-button {
 /* Firefox */
 input[type="number"] {
   -moz-appearance: textfield;
+  -webkit-appearance: textfield;
 }
 
 .text-gold {
